// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryResponsivePicture [GalleryResponsivePicture hidden] Component basic tests matches the snapshot 1`] = `
.c0 {
  opacity: 1;
  position: relative;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  min-width: 100%;
  position: absolute;
  opacity: 0;
}

.c1 {
  object-fit: cover;
  min-width: 100%;
  height: 100%;
}

<picture
  className="c0"
  onLoad={[Function]}
>
  <source
    media="(min-width: 600px)"
    srcSet="img-big.jpg"
  />
  <img
    alt="alt"
    className="c1"
    src="img.jpg"
  />
</picture>
`;

exports[`GalleryResponsivePicture [GalleryResponsivePicture visible] Component basic tests matches the snapshot 1`] = `
.c0 {
  opacity: 1;
  position: relative;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  min-width: 100%;
}

.c1 {
  object-fit: cover;
  min-width: 100%;
  height: 100%;
}

<picture
  className="c0"
  onLoad={[Function]}
>
  <source
    media="(min-width: 600px)"
    srcSet="img-big.jpg"
  />
  <img
    alt="alt"
    className="c1"
    src="img.jpg"
  />
</picture>
`;
